[gd_scene load_steps=14 format=3 uid="uid://dlvst3mwobkk0"]

[ext_resource type="Texture2D" uid="uid://cbe54vv4qiu82" path="res://Assets/Texture/Game/Background/Purple.png" id="1_3bc31"]
[ext_resource type="Script" path="res://Scene/Setting/setting.gd" id="1_5nqof"]
[ext_resource type="LabelSettings" uid="uid://d15iwulm6e4mf" path="res://Assets/LableSetting/Title.tres" id="2_h5gg8"]
[ext_resource type="FontFile" uid="uid://c81kkj37sh72r" path="res://Assets/Fonts/SourceHanSansCN-Bold.otf" id="3_g3ttj"]
[ext_resource type="Theme" uid="uid://j2wqtopwadpw" path="res://Assets/Theme/Normal.tres" id="5_88bbo"]
[ext_resource type="Texture2D" uid="uid://ckkfgu0hj4pip" path="res://Assets/Texture/Game/Menu/Buttons/Close.png" id="6_o1vau"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o4cxr"]
bg_color = Color(0.239216, 0.239216, 0.239216, 0.52549)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="LabelSettings" id="LabelSettings_15lod"]
font = ExtResource("3_g3ttj")
font_size = 40
shadow_color = Color(0.976471, 0.321569, 0.113725, 1)
shadow_offset = Vector2(0, 2)

[sub_resource type="LabelSettings" id="LabelSettings_r6kt3"]
font = ExtResource("3_g3ttj")
font_size = 40
shadow_color = Color(0.976471, 0.321569, 0.113725, 1)
shadow_offset = Vector2(0, 2)

[sub_resource type="LabelSettings" id="LabelSettings_uii7y"]
font = ExtResource("3_g3ttj")
font_size = 100
shadow_color = Color(0.976471, 0.321569, 0.113725, 1)
shadow_offset = Vector2(0, 2)

[sub_resource type="Animation" id="Animation_7tlln"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Label:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Label:text")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["3"]
}

[sub_resource type="Animation" id="Animation_4jaso"]
resource_name = "new_animation"
length = 3.0
step = 1.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Label:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Label:text")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1, 2, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": ["3", "2", "1", "继续！"]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_km724"]
_data = {
"RESET": SubResource("Animation_7tlln"),
"new_animation": SubResource("Animation_4jaso")
}

[node name="CanvasLayer" type="CanvasLayer"]
process_mode = 3
layer = 50
visible = false

[node name="Setting" type="Control" parent="."]
modulate = Color(1, 1, 1, 0.941176)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5nqof")

[node name="TextureRect" type="TextureRect" parent="Setting"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_3bc31")
stretch_mode = 1

[node name="Label" type="Label" parent="Setting"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 89.0
grow_horizontal = 2
text = "设置"
label_settings = ExtResource("2_h5gg8")
horizontal_alignment = 1
vertical_alignment = 1

[node name="GridContainer" type="GridContainer" parent="Setting"]
layout_mode = 0
offset_top = 89.0
offset_right = 486.0
offset_bottom = 1080.0
columns = 4

[node name="Panel" type="Panel" parent="Setting/GridContainer"]
custom_minimum_size = Vector2(486, 495)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_o4cxr")

[node name="Label" type="Label" parent="Setting/GridContainer/Panel"]
layout_mode = 0
offset_right = 486.0
offset_bottom = 57.0
text = "音量设置"
label_settings = SubResource("LabelSettings_15lod")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label3" type="Label" parent="Setting/GridContainer/Panel"]
layout_mode = 0
offset_left = 160.0
offset_top = 291.0
offset_right = 320.0
offset_bottom = 353.0
text = "音量"
label_settings = SubResource("LabelSettings_r6kt3")
horizontal_alignment = 1

[node name="CheckBox" type="CheckBox" parent="Setting/GridContainer/Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -154.0
offset_top = 95.0
offset_right = -76.0
offset_bottom = 123.0
grow_horizontal = 2
scale = Vector2(4, 4)
button_pressed = true
alignment = 1
icon_alignment = 1
vertical_icon_alignment = 0
expand_icon = true

[node name="Label2" type="Label" parent="Setting/GridContainer/Panel"]
layout_mode = 0
offset_left = 188.0
offset_top = 122.0
offset_right = 348.0
offset_bottom = 184.0
text = "开启声音"
label_settings = SubResource("LabelSettings_r6kt3")

[node name="HSlider" type="HSlider" parent="Setting/GridContainer/Panel"]
layout_mode = 2
offset_left = 96.0
offset_top = 259.0
offset_right = 246.0
offset_bottom = 275.0
scale = Vector2(2, 2)
min_value = -50.0
max_value = 0.0
step = 0.01

[node name="Button" type="Button" parent="Setting/GridContainer/Panel"]
layout_mode = 0
offset_left = 48.0
offset_top = 388.0
offset_right = 447.0
offset_bottom = 463.0
theme = ExtResource("5_88bbo")
text = "应用"

[node name="TextureButton" type="TextureButton" parent="Setting"]
texture_filter = 1
layout_mode = 0
offset_left = 1845.0
offset_top = 19.0
offset_right = 1899.0
offset_bottom = 73.0
texture_normal = ExtResource("6_o1vau")
texture_pressed = ExtResource("6_o1vau")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "3"
label_settings = SubResource("LabelSettings_uii7y")
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Setting")
libraries = {
"": SubResource("AnimationLibrary_km724")
}

[connection signal="visibility_changed" from="." to="Setting" method="_on_canvas_layer_visibility_changed"]
[connection signal="pressed" from="Setting/GridContainer/Panel/Button" to="Setting" method="_on_button_pressed"]
[connection signal="pressed" from="Setting/TextureButton" to="Setting" method="_on_texture_button_pressed"]
